E-learning/force-app/main/default/objects/Unit_Response__c/fields/Numbers_of_tries__c.field-meta.xml
<CustomField>
    <fullName>Numbers_of_tries__c</fullName>
    <label>Numbers of tries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>