E-learning/force-app/main/default/objects/Unit_Response__c/fields/unit_Status__c.field-meta.xml
<CustomField>
    <fullName>unit_Status__c</fullName>
    <label>unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>