E-learning/force-app/main/default/objects/Unit_Response__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Unit Responses</relationshipLabel>
    <relationshipName>Unit_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>